tests/errors/semantic_52/s1.src
.IPPcode21

DEFVAR GF@a
DEFVAR GF@b
DEFVAR GF@a
